--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -10,6 +10,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .dropdown {
@@ -39,6 +40,7 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    right: 0;
 }
 
 .dropdownContent a {
