--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,20 @@
 body {
-    font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+button {
+    color: #ffffff;
+    background-color: red;
+    border: 2px solid;
+    border-radius: 4px;
+    padding: 8px;
+    cursor: pointer;
+    font-weight: bold;
 }
