split up account actions in different components

--- a/pages/login.module.css
+++ b/pages/login.module.css
@@ -2,14 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    align-content: center;
 }
 
 .loginForm {
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: flex-start;
     padding: 1rem;
     border: solid 2px #0000002f;
