--- a/components/calendar/week.module.css
+++ b/components/calendar/week.module.css
@@ -6,7 +6,7 @@
     align-items: flex-start;
 }
 
-.weekDay {
+.day {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -14,12 +14,13 @@
     align-items: center;
 }
 
-.weekDayHeader {
+.dayHeader {
     width: 100%;
     height: 50px;
     position: sticky;
     top: 0;
     background-color: #333333;
+    color: #fff;
 }
 
 .hour {
