--- a/components/calendar/form.module.css
+++ b/components/calendar/form.module.css
@@ -9,6 +9,9 @@
     align-items: center;
 }
 
-.createLectureForm {
-    background-color: white;
-}
+.closeButton {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    color: red;
+  }
