--- a/components/calendar/week.module.css
+++ b/components/calendar/week.module.css
@@ -14,6 +14,11 @@
     align-items: center;
 }
 
+.header {
+    font-size: 20px;
+    text-align: center;
+}
+
 .dayHeader {
     width: 100%;
     height: 50px;
@@ -32,4 +37,8 @@
 
 .hour:hover {
     cursor: pointer;
+}
+
+.lecture {
+    background-color: red;
 }
