--- a/pages/login.module.css
+++ b/pages/login.module.css
@@ -8,17 +8,18 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 1rem;
-    border: solid 2px #0000002f;
-    border-radius: 1rem;
 }
 
 .loginForm div {
     width: 100%;
+}
+
+.loginForm div {
     margin-bottom: 1rem;
 }
 
 .loginButton {
     float: right;
-    background-color: #1aaa55;
+    background-color: var(--accent-color);
+    border: 2px solid var(--accent-color);
 }
