--- a/components/calendar/lectureForm.module.css
+++ b/components/calendar/lectureForm.module.css
@@ -5,7 +5,7 @@
     padding: 1rem;
     border: solid 2px #0000002f;
     border-radius: 1rem;
-    background-color: #fff;
+    background-color: var(--background-color);
 }
 
 .lectureForm div {
