--- a/public/styles.css
+++ b/public/styles.css
@@ -72,3 +72,7 @@ button {
     -moz-font-feature-settings: 'liga';
     -moz-osx-font-smoothing: grayscale;
 }
+
+.material-icons:hover {
+    color: var(--accent-color);
+}
