--- a/public/styles.css
+++ b/public/styles.css
@@ -24,13 +24,19 @@ a {
 
 input[type='text'],
 input[type='email'],
-input[type='password'] {
+input[type='password'],
+input[type='time'],
+input[type='date'] {
     width: 100%;
     padding: 12px;
     border: 1px solid rgb(255, 254, 254);
     border-radius: 4px;
     box-sizing: border-box;
     resize: vertical;
+}
+
+select {
+    width: 100%;
 }
 
 button {
