--- a/components/account.module.css
+++ b/components/account.module.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .containerBody {
