--- a/components/calendar/month.module.css
+++ b/components/calendar/month.module.css
@@ -1,7 +1,3 @@
-.monthContainer {
-    width: min-content;
-}
-
 .month {
     display: grid;
     grid-template-columns: repeat(7, auto);
@@ -20,17 +16,12 @@
     margin-bottom: 1rem;
 }
 
-.header button {
-    border: none;
-    font-size: small;
-}
-
 /* same as .hour */
 
 .day {
     height: 60px;
     width: 100px;
-    border: 1px solid black;
+    border: 1px solid var(--font-color);
 }
 
 /* adjusting calendar for smartphones */
