--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,10 +1,11 @@
 .navbar {
     overflow: hidden;
-    background-color: var(--accent-color);
+    background-color: var(--dark-purple-color);
     margin-bottom: 2rem;
 }
 
 .navbar a {
+    font-weight: bold;
     float: left;
     font-size: 16px;
     color: white;
@@ -31,13 +32,13 @@
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-    background-color: var(--accent-light-color);
+    background-color: var(--purple-color);
 }
 
 .dropdownContent {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: var(--background-color);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -46,7 +47,7 @@
 
 .dropdownContent a {
     float: none;
-    color: black;
+    color: var(--font-color);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -54,9 +55,15 @@
 }
 
 .dropdownContent a:hover {
-    background-color: var(--accent-light-color);
+    background-color: var(--cyan-color);
 }
 
 .dropdown:hover .dropdownContent {
     display: block;
+}
+
+@media only screen and (max-width: 600px) {
+    .navbar {
+        margin-bottom: 0px;
+    }
 }
