--- a/pages/login.module.css
+++ b/pages/login.module.css
@@ -8,18 +8,17 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    background-color: var(--cyan-color);
+    padding: 1rem;
+    border: 1px solid var(--cyan-color);
+    border-radius: 4px;
 }
 
 .loginForm div {
     width: 100%;
-}
-
-.loginForm div {
     margin-bottom: 1rem;
 }
 
 .loginButton {
     float: right;
-    background-color: var(--accent-color);
-    border: 2px solid var(--accent-color);
 }
