--- a/components/calendar/week.module.css
+++ b/components/calendar/week.module.css
@@ -42,4 +42,6 @@
     height: 50px;
     position: sticky;
     top: 0;
+    color: var(--background-color);
+    background-color: var(--dark-purple);
 }
