--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
     overflow: hidden;
-    background-color: var(--dark-purple-color);
+    background-color: var(--dark-purple);
     margin-bottom: 2rem;
 }
 
@@ -32,7 +32,7 @@
 
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-    background-color: var(--purple-color);
+    background-color: var(--purple);
 }
 
 .dropdownContent {
@@ -46,6 +46,7 @@
 }
 
 .dropdownContent a {
+    font-weight: normal;
     float: none;
     color: var(--font-color);
     padding: 12px 16px;
@@ -55,7 +56,7 @@
 }
 
 .dropdownContent a:hover {
-    background-color: var(--cyan-color);
+    background-color: var(--cyan);
 }
 
 .dropdown:hover .dropdownContent {
