--- a/components/upNext.module.css
+++ b/components/upNext.module.css
@@ -17,8 +17,8 @@
     grid-template-rows: auto;
     row-gap: 1rem;
     padding: 1rem;
-    border: 1px solid var(--cyan-color);
-    background-color: var(--cyan-color);
+    border: 1px solid var(--cyan);
+    background-color: var(--cyan);
     border-radius: 4px;
     width: 50vw;
     margin-top: 2rem;
