--- a/pages/login.module.css
+++ b/pages/login.module.css
@@ -8,9 +8,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: var(--cyan-color);
+    background-color: var(--cyan);
     padding: 1rem;
-    border: 1px solid var(--cyan-color);
+    border: 1px solid var(--cyan);
     border-radius: 4px;
 }
 
