finally fixed how lectures are displayed

--- a/components/calendar/week.module.css
+++ b/components/calendar/week.module.css
@@ -45,3 +45,11 @@
     color: var(--background-color);
     background-color: var(--dark-purple);
 }
+
+.hour {
+    position: relative;
+    height: 50px;
+    width: 150px;
+    color: var(--font-color);
+    border-bottom: 2px solid var(--dark-purple);
+}
