--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@
     --purple: #8245bf;
     --dark-cyan: #05f29b;
     --cyan: #b7f7df;
-    --background-color: #f2f2f2;
+    --background-color: #f9eff2;
     --dark-yellow: #f2cb05;
     --yellow: #f7e68f;
     --font-color: #333333;
