--- a/components/account.module.css
+++ b/components/account.module.css
@@ -5,18 +5,75 @@
 }
 
 .container {
+    border: 1px solid var(--cyan);
+    background-color: var(--cyan);
     padding: 1rem;
-    border: solid 2px #0000002f;
-    border-radius: 1rem;
-    min-width: 50vw;
+    border-radius: 4px;
+    width: 30vw;
 }
 
 .containerHeader {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+    justify-content: stretch;
+    column-gap: 5px;
+    row-gap: 5px;
+    margin-bottom: 1rem;
 }
 
 .containerBody {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.containerBody > * {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+.separatorLine {
+    border: 1px solid var(--purple);
+    border-radius: 4px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.createForm div {
+    margin-bottom: 1rem;
+}
+
+.createButton {
+    float: right;
+}
+
+.item {
+    padding: 1rem;
+    border: 1px solid var(--main-light-color);
+    border-radius: 4px;
+    background-color: var(--main-light-color);
+}
+
+.item .itemIcon {
+    float: right;
+}
+
+.item .itemForm div {
+    margin-bottom: 1rem;
+}
+
+.item .itemForm .saveButton {
+    float: right;
+}
+
+@media only screen and (max-width: 600px) {
+    .center {
+        justify-content: flex-start;
+    }
+    .container {
+        width: 100%;
+        border: none;
+        border-radius: 0px;
+    }
 }
