--- a/components/calendar/month.module.css
+++ b/components/calendar/month.module.css
@@ -1,12 +1,3 @@
-.month {
-    display: grid;
-    grid-template-columns: repeat(7, auto);
-    grid-template-rows: auto;
-    justify-content: center;
-    column-gap: 5px;
-    row-gap: 5px;
-}
-
 .header {
     width: 100%;
     display: inline-flex;
@@ -16,13 +7,13 @@
     margin-bottom: 1rem;
 }
 
-/* same as .hour */
-
-.day {
-    height: 50px;
-    width: 150px;
-    padding: 4px;
-    border-bottom: 1px solid var(--dark-purple);
+.month {
+    display: grid;
+    grid-template-columns: repeat(7, auto);
+    grid-template-rows: auto;
+    justify-content: center;
+    column-gap: 5px;
+    row-gap: 5px;
 }
 
 .dayHeader {
@@ -30,8 +21,17 @@
     height: 50px;
     position: sticky;
     top: 0;
-    padding: 4px;
     background-color: var(--dark-yellow);
+}
+
+.day {
+    width: 150px;
+    height: 50px;
+    border-bottom: 1px solid var(--dark-purple);
+}
+
+.lectureIcon {
+    float: right;
 }
 
 @media only screen and (max-width: 600px) {
