--- a/components/calendar/month.module.css
+++ b/components/calendar/month.module.css
@@ -7,6 +7,10 @@
     margin-bottom: 1rem;
 }
 
+.header button {
+    width: 150px;
+}
+
 .month {
     display: grid;
     grid-template-columns: repeat(7, auto);
