--- a/components/calendar/week.module.css
+++ b/components/calendar/week.module.css
@@ -7,6 +7,10 @@
     margin-bottom: 1rem;
 }
 
+.header button {
+    width: 150px;
+}
+
 .week {
     display: grid;
     grid-template-columns: repeat(7, auto);
@@ -29,6 +33,7 @@
     width: 150px;
     height: 50px;
     color: var(--font-color);
+    border-bottom: 1px solid var(--dark-purple);
 }
 
 @media only screen and (max-width: 600px) {
