--- a/components/adminPanel.module.css
+++ b/components/adminPanel.module.css
@@ -44,6 +44,13 @@
 
 .createButton {
     float: right;
+    background-color: var(--dark-cyan);
+    border-color: var(--dark-cyan);
+}
+
+.createButton:hover {
+    background-color: var(--dark-cyan);
+    border-color: var(--dark-cyan);
 }
 
 .item {
