--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,7 @@
     --dark-blue: #6805f2;
     --dark-purple: #6f04d9;
     --purple: #8245bf;
+    --pink: #e6d4f7;
     --dark-cyan: #04b977;
     --cyan: #b7f7df;
     --background-color: #f9eff2;
