--- a/components/calendar/week/week.module.css
+++ b/components/calendar/week/week.module.css
@@ -11,6 +11,16 @@
     width: 150px;
 }
 
+.todayButton {
+    background-color: var(--dark-cyan);
+    border-color: var(--dark-cyan);
+}
+
+.todayButton:hover {
+    background-color: var(--dark-cyan);
+    border-color: var(--dark-cyan);
+}
+
 .week {
     display: grid;
     grid-template-columns: repeat(7, auto);
@@ -33,7 +43,7 @@
     width: 150px;
     height: 50px;
     color: var(--font-color);
-    border-bottom: 1px solid var(--dark-purple);
+    border-bottom: 1px solid var(--font-color);
 }
 
 @media only screen and (max-width: 600px) {
